...
        android:textSize="9sp"
        app:icon="@drawable/ic_notifications"
        app:iconGravity="top"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attendee_profile_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="Profile"
...
