<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    tools:context=".AttendeeProfileFragment">

    <TextView
        android:id="@+id/tvProfileHeader"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Profile"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="true"
        android:text="Edit Profile Photo" />

    <TextView
        android:id="@+id/tvFullNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Full Name" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Allison TheRock Johnson"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Phone Number" />

    <EditText
        android:id="@+id/phoneNumberEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="1233456789"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Homepage" />

    <EditText
        android:id="@+id/homepageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Enter Homepage Link"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/LocationPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Location Permission" />

    <Switch
        android:id="@+id/toggleLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <!-- Layout for Save and Back buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/btnResetApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reset Data" />
    </LinearLayout>

</LinearLayout>