...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_logo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-94dp"
            android:layout_marginEnd="50dp"
            android:text="Create Profile"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_slogan"
            android:layout_width="wrap_content"
...
