...
    <string name="send_notification">Send Notification\n</string>
    <string name="message_title">Write your heading/title here!</string>
    <string name="notification_message">Write your message here!</string>
    <string name="what_to_expect">What to expect</string>
    <string name="save_publish_string">Save and Publish</string>
    <string name="choose_make_qr_string">Custom Check In Code</string>
    <string name="prompt">Upload your image here</string>
    <string name="upload">Upload</string>
    <string name="event_poster">Clear poster</string>
    <string name="cancel">Cancel</string>
    <string name="edit_event">Edit Event</string>
    <string name="choose_image">Choose Image</string>
    <string name="editProfilImg">Edit Profile Img</string>
...
